test/fail/invalid_everything.rlang
/* invalid everything */
foo bar baz;
